# uciengine

./: .gitignore  Cargo.toml  LICENSE  ReadMe.md
examples/: analysis.rs  example.rs  ponder.rs  watch.rs
meta/: b.bat  gen.py  p.bat  s.bat
s/: b.bat  gen.py  p.bat
src/: analysis.rs  example.rs  lib.rs  ponder.rs  uciengine.rs
