[package]
name = "uciengine"
version = "0.1.18"
authors = ["hyperchessbot <hyperchessbot@gmail.com>"]
edition = "2018"
keywords = ["uci", "chess", "engine", "wrapper"]
description = "Use chess engine wrapper supporting uci command necessary for playing a game. Analysis is not supported."
license = "MIT"
repository = "https://github.com/hyperchessbot/uciengine"
homepage = "https://github.com/hyperchessbot/uciengine#uciengine"
documentation = "https://docs.rs/uciengine/0.1.18"
readme = "ReadMe.md"

[dependencies]
log = "0.4.11"
env_logger = "0.8.2"

[dependencies.tokio]
version = "1.0.1"
features = ["full"]

[[bin]]
name = "example"
path = "src/example.rs"

[lib]
