[package]
name = "uciengine"
version = "0.1.33"
authors = ["hyperchessbot <hyperchessbot@gmail.com>"]
edition = "2018"
keywords = ["uci", "chess", "engine", "wrapper"]
description = "Use chess engine wrapper supporting uci command necessary for playing a game. Analysis is not supported."
license = "MIT"
repository = "https://github.com/hyperchessbot/uciengine"
homepage = "https://github.com/hyperchessbot/uciengine#uciengine"
documentation = "https://docs.rs/uciengine/0.1.33"
readme = "ReadMe.md"

[dev-dependencies]
env_logger = "0.8.2"

[dependencies]
log = "0.4.11"
thiserror = "1.0.23"
serde_json = "1.0.61"
envor = "0.1.5"

[dependencies.serde]
version = "1.0.118"
features = [ "derive" ]

[dependencies.tokio]
version = "1.0.1"
features = [ "full" ]

[lib]
path = "src/lib.rs"